[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
libp2p = { version = "*", features = [
    "async-std",
    "noise",
    "macros",
    "ping",
    "tcp",
    "identify",
    "yamux",
    "relay",
    "quic",
] }
futures = "0.3.30"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
